[gd_scene load_steps=10 format=3 uid="uid://b5xrrebw4lms7"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_jnw3j"]
[ext_resource type="Theme" uid="uid://c2d7mg3u5mfi5" path="res://ThemeUI.tres" id="2_37qg8"]
[ext_resource type="Texture2D" uid="uid://cuqsdnodv858t" path="res://Pictures/BG/BG_menu.png" id="2_h3ht2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pv2kj"]
atlas = ExtResource("2_h3ht2")
region = Rect2(0, 0, 150, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt7rs"]
atlas = ExtResource("2_h3ht2")
region = Rect2(0, 75, 150, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlpef"]
atlas = ExtResource("2_h3ht2")
region = Rect2(0, 150, 150, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_si243"]
atlas = ExtResource("2_h3ht2")
region = Rect2(0, 225, 150, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucq4m"]
atlas = ExtResource("2_h3ht2")
region = Rect2(0, 300, 150, 75)

[sub_resource type="SpriteFrames" id="SpriteFrames_uve8t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv2kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt7rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlpef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si243")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucq4m")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="MainPreloaderScene" type="Node2D"]
script = ExtResource("1_jnw3j")

[node name="LoadedScenes" type="Node2D" parent="."]
visible = false

[node name="LoadingScene" type="Node2D" parent="."]

[node name="Header" type="Label" parent="LoadingScene"]
light_mask = 3
offset_left = 77.0
offset_top = 27.0
offset_right = 1925.0
offset_bottom = 193.0
theme = ExtResource("2_37qg8")
theme_override_font_sizes/font_size = 90
text = "Загрузка..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingDescription" type="Label" parent="LoadingScene"]
light_mask = 3
offset_left = 321.0
offset_top = 781.0
offset_right = 1590.0
offset_bottom = 888.0
theme = ExtResource("2_37qg8")
theme_override_colors/font_color = Color(1, 1, 1, 0.784314)
text = "...
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="LoadingScene"]
z_index = -3
position = Vector2(970, 488)
scale = Vector2(14.5, 14.5)
sprite_frames = SubResource("SpriteFrames_uve8t")
autoplay = "default"
frame_progress = 0.860617

[node name="LoadingProgressBar" type="ProgressBar" parent="LoadingScene"]
z_index = 1
offset_left = -1.0
offset_top = 870.0
offset_right = 999.0
offset_bottom = 920.0
scale = Vector2(1.925, 1.925)
mouse_default_cursor_shape = 5
theme = ExtResource("2_37qg8")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(960, 480)
ignore_rotation = false
